# cpp_primer_book_exercises

./: CMakeLists.txt  README.md  adjacent_ints.cpp  binary_search.cpp  input.cpp  iterators.cpp  minmax.cpp  outside_in_adaptor.h  util.h  vector_swap.cpp  words.txt
bookstore/: CMakeLists.txt  bookstore.cpp
